[package]
name = "snakes"
version = "0.1.0"
authors = ["karlfroldan <karlfroldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
druid = "0.7.0"
getrandom = "0.2.3"
oorandom = "11.1.3"
byte-strings = "0.1.3"
byteorder = "1.4.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3